# rust_course

./: .gitignore
hw-01/src/: main.rs
hw-02/: Cargo.toml
hw-02/src/: main.rs
hw-03/: Cargo.toml
hw-03/src/: main.rs
hw-04/: Cargo.toml  test.csv
hw-04/src/: main.rs
hw-04/src/str_transform/: csv_pretty.rs  mod.rs
hw-05/: .gitignore  Cargo.toml  test.sh
hw-05/src/: chat_message.rs
myrustchat/: .env  .gitignore  Cargo.toml  README.md  test.sh
myrustchat/src/: chat_message.rs  datagram.rs  lib.rs
