[package]
name = "mychat"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.202", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0.60"
clap = { version = "4.0", features = ["derive"] }


[lib]
name = "chat"

[[bin]]
name = "client"
path = "src/bin/client.rs"

[[bin]]
name = "server"
path = "src/bin/server.rs"
