[package]
name = "mychat"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.202", features = ["derive"] }
thiserror = "1.0.60"
clap = { version = "4.0", features = ["derive"] }
chrono = "0.4.38"
serde_cbor = "0.11.2"
image = "0.25.1"

[lib]
name = "chat"

[[bin]]
name = "client"
path = "src/bin/client.rs"

[[bin]]
name = "server"
path = "src/bin/server.rs"
