[package]
name = "myrustchat"
version = "0.1.2"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.202", features = ["derive"] }
thiserror = "1.0.60"
clap = { version = "4.0", features = ["derive"] }
chrono = "0.4.38"
serde_cbor = "0.11.2"
image = "0.25.1"
log = "0.4.21"
simple_logger = "5.0.0"
anyhow = "1.0.86"
tokio = { version = "1.38.0", features = ["macros", "rt-multi-thread", "fs", "net", "io-util", "sync"] }
sqlx = { version = "0.7.4", features = ["sqlite"] }
rand = "0.8.5"
argon2 = "0.5.3"
tempfile = "3.10.1"

[lib]
name = "chat"

[[bin]]
name = "client"
path = "src/bin/client/client.rs"

[[bin]]
name = "server"
path = "src/bin/server/server.rs"
